--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width initial-scale=1.0" />
+	<link rel="stylesheet" href="css/style.css" media="all">
+	<script src="js/jquery-1.10.2.min.js"></script>
+	<script src="js/script.js"></script>
     <title>ハッカソン</title>
 </head>
 <body>
-   <div id="aa"></div>a 
+<p id="test1"></p>
+<p id="test2"></p>
+
+
 </body>
 </html>
