--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <title>ハッカソン</title>
 </head>
 <body>
-<p id="test1"></p>
-<p id="test2"></p>
-
+<img src="img/not.png" width="100%" alt="notパンツ" />
 
 </body>
 </html>
