--- a/not.html
+++ b/not.html
@@ -9,7 +9,7 @@
     <title>ハッカソン</title>
 </head>
 <body>
-	<p id="test1">失敗</p>
+	<img src="img/not.png" width="100%" alt="">
 	<input id="back" type="button" value="戻る">
 </body>
 </html>
