--- a/success.html
+++ b/success.html
@@ -9,7 +9,7 @@
     <title>ハッカソン</title>
 </head>
 <body>
-	<p id="test1">成功</p>
+	<img src="img/pants.png" width="100%" alt="">
 	<input id="back" type="button" value="戻る">
 </body>
 </html>
