--- a/not.html
+++ b/not.html
@@ -11,5 +11,6 @@
 <body>
 	<img src="img/not.png" width="100%" alt="">
 	<input id="back" type="button" value="戻る">
+	<audio src="audio/ng.m4a" autoplay ></audio>
 </body>
 </html>
