--- a/success.html
+++ b/success.html
@@ -11,5 +11,8 @@
 <body>
 	<img src="img/pants.png" width="100%" alt="">
 	<input id="back" type="button" value="戻る">
+	<audio autoplay preload="metadata">
+    	<source src="audio/ok.mp3" type="audio/mp3"/>
+    </audio>
 </body>
 </html>
